[package]
name = "git-who"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "3"
crossterm = "0.26"
git2 = { version = "0.17", default-features = false }
tui = { version = "0.20", package = "ratatui" }
