[package]
name = "git-whence"
description = "interactive git reblame"
version = "0.4.2"
edition = "2021"
repository = "https://github.com/raylu/git-whence"
readme = "readme.md"
keywords = ["git-blame"]
categories = ["command-line-utilities"]
license = "blessing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "3"
chrono = "0.4.31"
crossterm = "0.26"
git2 = { version = "0.17", default-features = false }
nom = "7"
timeago = { version = "0.4", default-features = false }
tui = { version = "0.24", package = "ratatui" }
